# sx-x-ccpm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  cgal.patch  pt.py  requirements.txt  run  uncrustify.cfg
.github/workflows/: main.yml
include/: Poly_rings.h  Utilities.cpp  Utilities.hpp  itf_CGAL.h  itf_CImg.h  itf_policies.h
sphinx/: Makefile
sphinx/source/: conf.py  index.rst
sphinx/source/article/: impl.rst  model.rst
sphinx/source/qstart/: setup.rst
sphinx/source/usage/: command.rst  tuto0.rst
src/: main.cpp
tests/: CMakeLists.txt  main.cpp
unit_test/: CMakeLists.txt  test_cgal.cpp  test_cimg.cpp
